--- a/main.html
+++ b/main.html
@@ -7,6 +7,16 @@
 </head>
 
 <body>
+	<img
+      src="https://images.unsplash.com/photo-1470194289342-3fc894aae071?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8bGVvfGVufDB8fDB8fHww"
+      class="moviePic"
+    />
+    <p class="movieDetail">
+      Plot. Parthiban "Parthi" is an animal rescuer and a café owner in Theog,
+      living happily with his wife, Sathya, and two children, Siddharth "Siddhu"
+      and Mathi "Chintu". One day, Parthi's friend, Joshy Andrews, a forest
+      ranger, calls him to help tame a spotted hyena on the loose.
+    </p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
